fixed spacing of posts on posts.js

--- a/client/src/pages/Posts/style.css
+++ b/client/src/pages/Posts/style.css
@@ -39,12 +39,13 @@ body {
   display: flex;
   flex-direction: row;
   margin: 2rem;
+  flex-wrap: wrap;
 }
 
 .card {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
-  width: 25%;
+  width: 40%;
   padding: 1rem;
   margin: 1rem;
   border-radius: 15px;
